change package config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "samurai-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://irya-lis.github.io/samurai-react",
+  "homepage": "https://irya-lis.github.io/study-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
