--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samurai-react",
+  "name": "study-project",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://irya-lis.github.io/study-project",
